# LibStevi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  stevi_global.h
cmake/: Config.cmake.in
correlation/: census.h  correlation_base.h  cost_based_refinement.cpp  cost_based_refinement.h  cross_correlations.cpp  cross_correlations.h  disparity_plus_background_segmentation.h  dynamic_programing_stereo.h  fast_approximate_matching.h  feature_volume_infos.h  guided_cost_filtering.h  hierarchical.h  image_based_refinement.h  matching_costs.h  ncc.h  on_demand_cost_volume.h  on_demand_features_volume.h  patchmatch.h  sad.h  sgm.h  ssd.h  template_matching.h  unfold.cpp  unfold.h
examples/: CMakeLists.txt
examples/bg_fg_stereo/: CMakeLists.txt  main.cpp
examples/checkboard_detection/: CMakeLists.txt  main.cpp
examples/data_img_viewer/: CMakeLists.txt  main.cpp
examples/detrend_terrain_in_pt_cloud/: CMakeLists.txt  main.cpp
examples/generic_ray_alignement_evaluation/: CMakeLists.txt  main.cpp
examples/intrisic_image_decomposition/: CMakeLists.txt  ReadMe.md  main.cpp
examples/io_img_and_disp/: CMakeLists.txt  main.cpp
examples/io_las/: CMakeLists.txt  main.cpp
examples/io_map/: CMakeLists.txt  main.cpp
examples/io_metacloud/: CMakeLists.txt  main.cpp
examples/io_pcd/: CMakeLists.txt  main.cpp
examples/io_pcd_read/: CMakeLists.txt  main.cpp
examples/io_remove_attributes/: CMakeLists.txt  main.cpp
examples/io_sdc/: CMakeLists.txt  main.cpp
examples/io_sdc_read/: CMakeLists.txt  main.cpp
examples/normal_map_estimation/: CMakeLists.txt  ReadMe.md  main.cpp
examples/optical_flow_refine_test/: CMakeLists.txt  main.cpp
examples/point_cloud_infos/: CMakeLists.txt  main.cpp
examples/points_cloud2depth_map/: CMakeLists.txt  main.cpp
examples/split_pt_cloud_with_context/: CMakeLists.txt  main.cpp
examples/stereo-match/: CMakeLists.txt  main.cpp
examples/stereo_refine_test/: CMakeLists.txt  main.cpp  main_w_time.cpp
examples/stevimg_viewer/: CMakeLists.txt  main.cpp
examples/tie_points_checker/: CMakeLists.txt  main.cpp
geometry/: alignement.cpp  alignement.h  core.cpp  core.h  genericbinarypartitioningtree.h  genericraysalignement.h  geometricexception.cpp  geometricexception.h  imagecoordinates.cpp  imagecoordinates.h  lensdistortion.cpp  lensdistortion.h  posesmath.h  (+7 more)
submodules/: CMakeLists.txt
test/: CMakeLists.txt  testCore.cpp  testCorrelation2d.cpp  testCorrelationFilters.cpp  testCorrelationHierarchical.cpp  testCostRefinement.cpp  testL1Optimization.cpp  testLenseDistortion.cpp  testPointCloudAlignement.cpp  testRotations.cpp  test_correlation_utils.h
test/benchmarks/: CMakeLists.txt  benchmarkCrossCorrelationAlgorithms.cpp  benchmarkForegroundSegmentation.cpp  benchmarkImageSaving.cpp  benchmarkL0ApproximationFunctions.cpp  benchmarkNormSolverAlgorithms.cpp  benchmarkRandomUtils.cpp  benchmarkRaysAlignementAlgorithms.cpp  benchmarkSparseImageMatching.cpp  benchmarkStereoMatchingModels.cpp  benchmarkUnfoldOperators.cpp
test/pointcloud_samples/las/: pointcloud_format0.las  pointcloud_format0_with_extra_attributes.las  pointcloud_format0_with_vlrs_and_evlrs.las  pointcloud_format1.las  pointcloud_format10.las  pointcloud_format10_with_extra_attributes_3.las  pointcloud_format10_with_vlrs_and_evlrs.las  pointcloud_format1_with_extra_attributes.las  pointcloud_format1_with_vlrs_and_evlrs.las  pointcloud_format2.las  pointcloud_format2_with_extra_attributes.las  pointcloud_format2_with_vlrs_and_evlrs.las  pointcloud_format3.las  pointcloud_format3_with_extra_attributes.las  pointcloud_format3_with_vlrs_and_evlrs.las  pointcloud_format4.las  pointcloud_format4_with_extra_attributes.las  pointcloud_format4_with_vlrs_and_evlrs.las  pointcloud_format5.las  pointcloud_format5_with_extra_attributes.las  pointcloud_format5_with_vlrs_and_evlrs.las  pointcloud_format6.las  pointcloud_format6_with_extra_attributes.las  pointcloud_format6_with_vlrs_and_evlrs.las  pointcloud_format7.las  pointcloud_format7_with_extra_attributes.las  pointcloud_format7_with_vlrs_and_evlrs.las  pointcloud_format8.las  pointcloud_format8_with_extra_attributes.las  pointcloud_format8_with_vlrs_and_evlrs.las  pointcloud_format9.las  pointcloud_format9_with_extra_attributes.las  pointcloud_format9_with_vlrs_and_evlrs.las
test/pointcloud_samples/metacloud/: multiple_las_no_extra_attributes.metacloud  multiple_pcd_no_extra_attributes.metacloud  multiple_pcd_no_extra_attributes.out.las  one_las_no_extra_attributes.metacloud  one_pcd_no_extra_attributes.metacloud
test/pointcloud_samples/pcd/: xyz_ascii.pcd  xyz_binary.pcd  xyz_intensity_curvature_ascii.pcd  xyz_intensity_curvature_binary.pcd  xyz_r_g_b_a_float_ascii.pcd  xyz_r_g_b_a_float_binary.pcd  xyz_r_g_b_a_uint_ascii.pcd  xyz_r_g_b_a_uint_binary.pcd  xyz_r_g_b_float_ascii.pcd  xyz_r_g_b_float_binary.pcd  xyz_r_g_b_uint_ascii.pcd  xyz_r_g_b_uint_binary.pcd  xyz_red_green_blue_alpha_ascii.pcd  xyz_red_green_blue_alpha_binary.pcd  xyz_rgb_ascii.pcd  xyz_rgb_binary.pcd  xyz_rgba_ascii.pcd  xyz_rgba_binary.pcd  xyz_with_nan_ascii.pcd  xyz_with_nan_binary.pcd
test/unittests/: CMakeLists.txt  testAssignementProblems.cpp  testCheckboardDetection.cpp  testCombinatorial.cpp  testConnectedComponents.cpp  testConvolution.cpp  testCorrelation2d.cpp  testCorrelationFilters.cpp  testCorrelationHierarchical.cpp  testCostRefinement.cpp  testCovarianceKernels.cpp  testFiniteDifferences.cpp  testGraphs.cpp  testHexTargetDetection.cpp  testImageClusteringAlgorithms.cpp  testImageIO.cpp  testIndexers.cpp  testInpaintingAlgorithms.cpp  testInterpolation.cpp  testL0Optimization.cpp  testL1Optimization.cpp  testLeastMedianOptimization.cpp  testLenseDistortion.cpp  testMatchPattern.cpp  testOnDemandCostVolume.cpp  testOptimizationUtils.cpp  testPCA.cpp  testPartitionTrees.cpp  testPixelsLines.cpp  testPixelsSets.cpp  testPointCloudAlignement.cpp  testPointCloudIO.cpp  testProjection.cpp  testRotations.cpp  testSegmentation.cpp  testSparseMatchingUtils.cpp  testStereoRigRectifier.cpp  testStereoStatistics.cpp  testTypesUtils.cpp
(+80 files in other folders)
