 add_subdirectory(io_img_and_disp)
 add_subdirectory(intrisic_image_decomposition)
 add_subdirectory(normal_map_estimation)
 add_subdirectory(checkboard_detection)
 add_subdirectory(bg_fg_stereo)

 if (buildGui)
     add_subdirectory(stevimg_viewer)
     add_subdirectory(data_img_viewer)
 endif(buildGui)
