 add_subdirectory(io_img_and_disp)
 add_subdirectory(intrisic_image_decomposition)
 add_subdirectory(normal_map_estimation)
 add_subdirectory(checkboard_detection)
 add_subdirectory(bg_fg_stereo)
 add_subdirectory(generic_ray_alignement_evaluation)

 if (buildGui)
     add_subdirectory(stevimg_viewer)
     add_subdirectory(data_img_viewer)
     add_subdirectory(tie_points_checker)
 endif(buildGui)
